[project]
name = "src"
version = "0.1.0"
description = ""
authors = [
    {name = "muchovej",email = "stephen.muchovej@gmail.com"}
]
readme = "README.md"
requires-python = "~3.11"
dependencies = [
    "fastapi (>=0.115.6,<0.116.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.2"
pytest = "^8.3.4"
black = "^24.10.0"

